syntax = "proto3";

package OMNI.Action;

import "Base.proto";

message SeekPayload {
    int32 second = 1;
}

message DoSkipPayload {
    optional string next = 1;
    optional int32 offset = 2;
}

message SwitchPlayState {
    PlayState play_state = 1;
}

message SwitchPlayMode {
    ConsumerMode play_mode = 1;
}